fixed z-index on navigation

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ body {
     color:#FFF;
     text-align:center;
     font-size:20px;
+    z-index: 5000;
 }
 #navigation a {
     z-index:1000;
